add alternate soln 22