@@ -6,38 +6,36 @@ import java.util.*;
 // But not in order that LeetCode expects
 
 public class GenerateParenthesis {
-    HashMap<Integer, HashSet<String>> cache = new HashMap<>();
-    
+    private final HashMap<Integer, List<String>> cache = new HashMap<>();
+
     public List<String> generateParenthesis(int n) {
-        if (cache.containsKey(n)) {
-            return new ArrayList<>(cache.get(n));
-        }
-        if (n==1) {
-            List<String> ans = Arrays.asList("()");
-            cache.put(1, new HashSet<>(ans));
-            return ans;
+        if (n == 1) {
+            List<String> answer = List.of("()");
+            cache.put(1, answer);
+            return answer;
         }
 
         if (!cache.containsKey(n-1)) {
             generateParenthesis(n-1);
         }
-        HashSet<String> cachedAnswer = cache.get(n-1);
 
-        HashSet<String> answer = new HashSet<>();
-        for (String cAns : cachedAnswer) {
-            answer.add("()"+cAns);
-            answer.add("("+cAns+")");
-            answer.add(cAns+"()");
+        Set<String> currentGeneration = new HashSet<>();
+        List<String> previousGeneration = cache.get(n-1);
+
+        for (String parenthesis: previousGeneration) {
+            currentGeneration.add("(" + parenthesis + ")");
+            currentGeneration.add("()" + parenthesis);
+            currentGeneration.add(parenthesis + "()");
         }
+
+        List<String> answer = currentGeneration.stream().toList();
         cache.put(n, answer);
-        
-        return new ArrayList<>(answer);
+        return answer;
     }
     
     public void driver() {
-        int n= 4;
+        int n= 3;
         List<String> answer = generateParenthesis(n);
         System.out.println(answer.toString());
     }
-
 }
